# stock

./: demo.txt  get_stock_price.py  pyproject.toml
data/: High_Dividend_Companies_Analysis_20250620_11.csv  High_Dividend_Companies_Analysis_20250620_13.csv  High_Dividend_Companies_fixed.csv
data/cache/: a_stock_price_cache.csv  hk_stock_price_cache.csv
